--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the Cart</title>
 </head>
+<style>
+    .center-it {
+        display: flex;
+        justify-content: center;
+    }
+</style>
 <body>
-    <h2>Please type your name:</h2>
-    <form action="/cart" method="POST">
+    <h2 class="center-it">Please type your name:</h2>
+    <form action="/cart" method="POST" class="center-it">
         <label for="name">Name:</label>
         <input type="text" name="name" placeholder="Enter your name" required>
         <input type="submit" value="VAMOS!">
